create and connect discovery http and grpc interfaces
