# lib/api/build.rs
@@ -192,6 +192,11 @@ fn configure_validation(builder: Builder) -> Builder {
             ("RecommendPointGroups.group_size", "range(min = 1)"),
             ("RecommendPointGroups.limit", "range(min = 1)"),
             ("RecommendPointGroups.params", ""),
+            ("DiscoverPoints.collection_name", "length(min = 1, max = 255)"),
+            ("DiscoverPoints.filter", ""),
+            ("DiscoverPoints.params", ""),
+            ("DiscoverBatchPoints.collection_name", "length(min = 1, max = 255)"),
+            ("DiscoverBatchPoints.discover_points", ""),
             ("CountPoints.collection_name", "length(min = 1, max = 255)"),
             ("CountPoints.filter", ""),
             ("GeoPolygon.exterior", "custom = \"crate::grpc::validate::validate_geo_polygon_exterior\""),
