# src/tonic/api/points_api.rs
@@ -3,7 +3,8 @@ use std::sync::Arc;
 use api::grpc::qdrant::points_server::Points;
 use api::grpc::qdrant::{
     ClearPayloadPoints, CountPoints, CountResponse, CreateFieldIndexCollection,
-    DeleteFieldIndexCollection, DeletePayloadPoints, DeletePointVectors, DeletePoints, GetPoints,
+    DeleteFieldIndexCollection, DeletePayloadPoints, DeletePointVectors, DeletePoints,
+    DiscoverBatchPoints, DiscoverBatchResponse, DiscoverPoints, DiscoverResponse, GetPoints,
     GetResponse, PointsOperationResponse, RecommendBatchPoints, RecommendBatchResponse,
     RecommendGroupsResponse, RecommendPointGroups, RecommendPoints, RecommendResponse,
     ScrollPoints, ScrollResponse, SearchBatchPoints, SearchBatchResponse, SearchGroupsResponse,
@@ -14,7 +15,8 @@ use storage::content_manager::toc::TableOfContent;
 use tonic::{Request, Response, Status};
 
 use super::points_common::{
-    delete_vectors, recommend_groups, search_groups, update_batch, update_vectors,
+    delete_vectors, discover, discover_batch, recommend_groups, search_groups, update_batch,
+    update_vectors,
 };
 use super::validate;
 use crate::tonic::api::points_common::{
@@ -205,6 +207,33 @@ impl Points for PointsService {
     ) -> Result<Response<RecommendGroupsResponse>, Status> {
         validate(request.get_ref())?;
         recommend_groups(self.toc.as_ref(), request.into_inner()).await
+    }
+
+    async fn discover(
+        &self,
+        request: Request<DiscoverPoints>,
+    ) -> Result<Response<DiscoverResponse>, Status> {
+        validate(request.get_ref())?;
+        discover(self.toc.as_ref(), request.into_inner()).await
+    }
+
+    async fn discover_batch(
+        &self,
+        request: Request<DiscoverBatchPoints>,
+    ) -> Result<Response<DiscoverBatchResponse>, Status> {
+        validate(request.get_ref())?;
+        let DiscoverBatchPoints {
+            collection_name,
+            discover_points,
+            read_consistency,
+        } = request.into_inner();
+        discover_batch(
+            self.toc.as_ref(),
+            collection_name,
+            discover_points,
+            read_consistency,
+        )
+        .await
     }
 
     async fn count(
